--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,7 @@
 *.crt
 jenkins-kubeconfig.yaml
 k9s_linux_amd64.deb.1
+.env.elasticsearch
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
